appId: app.crew.next
---
- extendedWaitUntil:
    visible:
      id: events-view
    timeout: 20000
- tapOn: .*Turkey Golf Tour 2026.*
- extendedWaitUntil:
    visible:
      id: event-hub
    timeout: 20000
- tapOn:
    id: event-hub-sync-button
- extendedWaitUntil:
    visible: .*synchronisiert.*
    timeout: 20000
- tapOn:
    id: event-hub-date-2026-10-05
- scrollUntilVisible:
    element: '.*Golf round: Carya Golf Club.*'
    direction: DOWN
- tapOn: '.*Golf round: Carya Golf Club.*'
- extendedWaitUntil:
    visible:
      id: golf-scorecard-view
    timeout: 20000
- assertVisible: LIVE-RANGLISTE
- assertVisible: OWNER
- assertVisible: Live mitfiebern
- scrollUntilVisible:
    element:
      id: golf-leaderboard-row-1
    direction: DOWN
- assertVisible:
    id: golf-leaderboard-row-1
- assertVisible: .*2 Stableford-Punkte.*1 von 18 Löchern.*
